@@ -13,6 +13,7 @@ Inactive/former developers:
   * Viktor Kojouharov (Виктор Кожухаров)
  
 Patches (in no special order):
+  * Kazuo (count support for ctrl-^)
   * Daniel Schaffrath (;b support)
   * Dominik Meister (:b# support and other buffer related commands)
   * Lukas Mai
